# a2a-omcp

./: .gitignore  pyproject.toml
config/: config.json
config/schemas/: examples.json  omop_cdm_schema.json  omop_validation_rules.json
src/: data_mcp.py
src/agent2agent_omcp/: __init__.py  client.py  data_agent.py  start_servers.py
